--- a/web/index.html
+++ b/web/index.html
@@ -1,8 +1,9 @@
 <html>
 <head>
-    <title>Testing crypto in the browser</title>
+    <title>Validation frontend</title>
 </head>
 <body>
-    <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="../docs/logic.js"></script>
+    <script type="text/javascript" src="validation.js"></script>
 </body>
 </html>
