--- a/web/src/validation.html
+++ b/web/src/validation.html
@@ -1,8 +1,8 @@
-<!-- <html>
+<html>
 <head>
     <title>Validation frontend</title>
     <script type="text/javascript" src="bundle.js"></script>
 </head>
-<body onload="startValidation()">
+<body>
 </body>
-</html> -->
+</html>
