--- a/web/src/index.html
+++ b/web/src/index.html
@@ -55,7 +55,7 @@
     <br/>
     <button id="btnTabNothing" class="controlButton">Nothing</button><button id="btnTabPasswords" class="controlButton">Password</button><button id="btnTabCiphers" class="controlButton">Ciphers</button><button id="btnTabReEncrypt" class="controlButton">Re-encrypt</button><br/><br/>
     <div id="divTabNothing"></div>
-    <div id="divTabPasswords">
+    <div id="divTabPasswords" style="display: none;">
         Public part:&nbsp; <input id="txtPublicPart" type="text"></input><button id="btnGeneratePublicPart" class="controlButton">Generate</button><button id="btnClearPublicPart" class="controlButton">Clear</button><button id="btnCopyPublicPart" class="controlButton">Copy</button> <span id="spnCopyPublicPartFeedback"></span></br>
         Alphabet:&nbsp;&nbsp;&nbsp;&nbsp; <input id="txtAlphabet" type="text" value=""></input><span id="spnAlphabetSize"></span><button id="btnResetAlphabet" class="controlButton">Reset</button></br>
         <br/>
