--- a/web/src/index.html
+++ b/web/src/index.html
@@ -7,10 +7,19 @@
 </head>
 <body>
     <div id="divInfo"></div>
-    Master key: <input id="txtPrivatePart" type="password"></input> <span id="spnPrivatePartSize">0</span><button id="btnProtect" class="controlButton" disabled="ture">Protect and lock</button> <span id="spnProtectedConfirmation"></span><br>
-    Master key: <input id="txtPrivatePartConfirmation" type="password" title="Just for your convenience to confirm the private part has been input correctly the first time."></input> <span id="spnPrivatePartSizeConfirmation">0</span><br>
-    <br>
-    <br>
+
+    <div id="divMasterKey">
+        <span id="masterKeyTitle">Master key:</span>
+        <input id="txtPrivatePart" type="password"></input>
+        <span id="spnPrivatePartSize">0</span>
+        <button id="btnProtect" class="controlButton" disabled="ture">Protect and lock</button>
+        <span id="spnProtectedConfirmation"></span>
+
+        <input id="txtPrivatePartConfirmation" type="password" title="Just for your convenience to confirm the private part has been input correctly the first time."></input>
+        <span id="spnPrivatePartSizeConfirmation">0</span>
+    </div>
+    <br/>
+    <br/>
     <button id="btnTabNothing" class="controlButton">Nothing</button><button id="btnTabPasswords" class="controlButton">Password</button><button id="btnTabCiphers" class="controlButton">Ciphers</button><button id="btnTabReEncrypt" class="controlButton">Re-encrypt</button><br><br>
 
     <div id="divTabNothing"></div>
