--- a/web/src/index.html
+++ b/web/src/index.html
@@ -6,9 +6,12 @@
     <link rel="stylesheet" type="text/css" href="css/base/masterKey.css" />
     <link rel="stylesheet" type="text/css" href="css/base/password.css" />
     <link rel="stylesheet" type="text/css" href="css/base/cipher.css" />
+    <link rel="stylesheet" type="text/css" href="css/base/reEncrypt.css" />
     <link rel="stylesheet" type="text/css" href="css/mobile/common.css" media="screen and (max-width: 40.5em)" />
     <link rel="stylesheet" type="text/css" href="css/mobile/masterKey.css" media="screen and (max-width: 40.5em)" />
     <link rel="stylesheet" type="text/css" href="css/mobile/password.css" media="screen and (max-width: 40.5em)" />
+    <link rel="stylesheet" type="text/css" href="css/mobile/cipher.css" media="screen and (max-width: 40.5em)" />
+    <link rel="stylesheet" type="text/css" href="css/mobile/reEncrypt.css" media="screen and (max-width: 40.5em)" />
 </head>
 <body>
     <div id="divInfo"></div>
@@ -63,7 +66,7 @@
         <span id="lblCipher">Cipher name:</span>
         <input id="txtCipherName" type="text"></input>
 
-        <textarea id="txtCipherSource" class="large-textarea"></textarea>
+        <textarea id="txtCipherSource"></textarea>
         <div id="divCipherSourceActions">
             <button id="btnClearCipherSource">Clear</button>
         </div>
@@ -73,7 +76,7 @@
             --><button id="btnDecrypt">Decrypt -></button>
         </div>
 
-        <textarea id="txtCipherTarget" class="readonlyText large-textarea" readonly></textarea>
+        <textarea id="txtCipherTarget" class="readonlyText" readonly></textarea>
         <div id="divCipherTargetActions">
             <button id="btnCopyCipherTarget">Copy</button><!--
             --><button id="btnClearCipherTarget">Clear</button>
@@ -81,21 +84,25 @@
     </div>
 
     <div id="divTabReEncrypt" class="divTab">
-        <div class="reEncryptGrid">
-            <textarea id="txtReEncryptSource" style="grid-column: 1; grid-row: 1;" class="large-textarea"></textarea>
-            <button id="btnClearReEncryptSource" style="grid-column: 1; grid-row: 2; justify-self: end;">Clear</button>
+        <textarea id="txtReEncryptSource"></textarea>
+        <div id="divReEncryptSourceActions">
+            <button id="btnClearReEncryptSource">Clear</button>
+        </div>
 
-            <div style="grid-column: 2; grid-row: 1;">
-                From: <select id="cboReEncryptFrom"></select><br/>
-                To:&nbsp;&nbsp; <select id="cboReEncryptTo"></select><br/>
-                <button id="btnReEncrypt" class="reEncryptButton">Re-encrypt -></button>
-            </div>
+        <div id="divReEncryptActions">
+            <span id="lblReEncryptFrom">From:</span>
+            <select id="cboReEncryptFrom"></select>
 
-            <textarea id="txtReEncryptTarget" style="grid-column: 3; grid-row: 1;" class="readonlyText large-textarea" readonly></textarea>
-            <div style="grid-column: 3; grid-row: 2; justify-self: end;">
-                <button id="btnCopyReEncryptTarget">Copy</button>
-                <button id="btnClearReEncryptTarget">Clear</button>
-            </div>
+            <span id="lblReEncryptTo">To:</span>
+            <select id="cboReEncryptTo"></select>
+
+            <button id="btnReEncrypt">Re-encrypt -></button>
+        </div>
+
+        <textarea id="txtReEncryptTarget" class="readonlyText" readonly></textarea>
+        <div id="divReEncryptTargetActions">
+            <button id="btnCopyReEncryptTarget">Copy</button><!--
+            --><button id="btnClearReEncryptTarget">Clear</button>
         </div>
     </div>
 
