Minor layout cleanup

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -26,9 +26,14 @@
         <input id="txtPrivatePartConfirmation" type="password" title="Just for your convenience to confirm the private part has been input correctly the first time."></input>
         <span id="spnPrivatePartSizeConfirmation">0</span>
     </div>
+
     <br/>
     <br/>
-    <button id="btnTabNothing">Nothing</button><button id="btnTabPasswords">Password</button><button id="btnTabCiphers">Ciphers</button><button id="btnTabReEncrypt">Re-encrypt</button><br><br>
+
+    <button id="btnTabNothing">Nothing</button><button id="btnTabPasswords">Password</button><button id="btnTabCiphers">Ciphers</button><button id="btnTabReEncrypt">Re-encrypt</button>
+
+    <br/>
+    <br/>
 
     <div id="divTabNothing"></div>
 
@@ -108,9 +113,10 @@
 
     <div id="divStorageOutput">
         <br/>
-        Storage path: <input id="txtPath" type="text"></input><br/>
+        Storage path:<br/>
+        <input id="txtPath" type="text"></input><br/>
         <br/>
-        Password generation parameters:<br/>
+        Storage data:<br/>
         <textarea id="txtParameters" class="readonlyText very-large-textarea" style="width: 100%" readonly></textarea><br/>
         <br/>
         Custom keys:<br/>
