Implemented tree view and tree filtering

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -118,6 +118,11 @@
     <div id="divTabVault" class="divTab">
         <button id="btnRefreshVault">Refresh</button><button id="btnClearVaultSettings">Clear settings</button><br/>
         <textarea id="txtVault" class="readonlyText very-large-textarea" readonly></textarea><br/>
+
+        <br/><br/><br/>
+        <span id="lblSearchVault">Search:</span>
+        <input id="txtSearchVault" type="text"></input><br/>
+       <div id="treeVault"></div><br/>
     </div>
 
     <div id="divStorageOutput">
