--- a/web/src/index.html
+++ b/web/src/index.html
@@ -1,5 +1,6 @@
 <html lang="en">
 <head>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Itchy Password</title>
     <link rel="shortcut icon" href="favicon.png">
