Fixed UI elements width issues

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -153,11 +153,11 @@
         </div><br/>
         <br/>
         <span id="lblStorageData">Storage data:</span><br/>
-        <textarea id="txtParameters" aria-labelledby="lblStorageData" class="readonlyText very-large-textarea" style="width: 100%" readonly></textarea><br/>
+        <textarea id="txtParameters" aria-labelledby="lblStorageData" class="readonlyText very-large-textarea" readonly></textarea><br/>
         <button id="btnPushToVault">Push to vault</button><br/>
         <br/>
         <span id="lblCustomKeys">Custom keys:</span><br/>
-        <textarea id="txtCustomKeys" aria-labelledby="lblCustomKeys" class="very-large-textarea" style="width: 100%"></textarea>
+        <textarea id="txtCustomKeys" aria-labelledby="lblCustomKeys" class="very-large-textarea"></textarea>
     </div>
 
     <script type="text/javascript" src="bundle.js"></script>
