Added a copy cipher source button

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -80,7 +80,8 @@
 
         <textarea id="txtCipherSource" aria-label="Cipher source"></textarea>
         <div id="divCipherSourceActions">
-            <button id="btnClearCipherSource">Clear</button>
+            <button id="btnCopyCipherSource">Copy</button><!--
+            --><button id="btnClearCipherSource">Clear</button>
         </div>
 
         <div id="divCipherActions">
