Added a 'Clear all' button in cipher pane

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -75,6 +75,8 @@
     </div>
 
     <div id="divTabCiphers" class="divTab">
+        <button id="btnClearAllCipherInfo">Clear all</button>
+
         <span id="lblCipher">Cipher name:</span>
         <input id="txtCipherName" aria-labelledby="lblCipher" type="text"></input>
 
