Reduced size of re-encrypt button

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -35,7 +35,7 @@
     <br/>
     <br/>
 
-    <button id="btnTabNothing">Nothing</button><button id="btnTabPasswords">Password</button><button id="btnTabCiphers">Ciphers</button><button id="btnTabReEncrypt">Re-encrypt</button><button id="btnTabVault">Vault</button>
+    <button id="btnTabNothing">Nothing</button><button id="btnTabPasswords">Password</button><button id="btnTabCiphers">Ciphers</button><button id="btnTabReEncrypt" title="Re-encrypt">...</button><button id="btnTabVault">Vault</button>
 
     <br/>
     <br/>
