Added UI, made password generators more pluggable

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -74,6 +74,9 @@
         <input id="numOutputSizeRange" aria-labelledby="lblAlphabetLength" type="range" min="0"></input>
         <input id="numOutputSizeNum" aria-labelledby="lblAlphabetLength" type="number" style="width: 50px"></input>
 
+        <span id="lblPasswordVersion">Version:</span>
+        <select id="cboPasswordVersion" aria-labelledby="lblPasswordVersion"></select>
+
         <span id="lblPassword">Password:</span>
         <input id="txtResultPassword" aria-labelledby="lblPassword" type="password" class="readonlyText" readonly></input>
         <span id="spnResultPasswordLength"></span>
